DnD in StatusTab again, refs #1940

--- a/src/etc/Translation_ar.properties
+++ b/src/etc/Translation_ar.properties
@@ -1753,7 +1753,7 @@ wizard.load_invitation.select_file=\u0627\u0644\u0631\u062c\u0627\u0621 \u0627\u
 ##wizard.multi_online_storage_setup.local_folder_location=Local folder location
 ##wizard.multi_online_storage_setup.select_directory=Select directory
 ##wizard.multi_online_storage_setup.title=Configure Online Folders
-##wizard.pfwizard.title=Folder Wizard
+##wizard.pfwizard.folder_title=Folder Wizard
 ##wizard.project_name.folder_project_success=You successfully set up a project folder\!\n
 ##wizard.select_online_storage.desktop_shortcut.text=Create desktop shortcut
 ##wizard.select_online_storage.info=Please select online folders to join locally
