--- a/src/etc/Translation_de.properties
+++ b/src/etc/Translation_de.properties
@@ -2601,8 +2601,8 @@ wizard.multi_online_storage_setup.local_folder_location=Lokaler Speicherort
 wizard.multi_online_storage_setup.select_directory=Verzeichnis ausw\u00e4hlen
 #orig#wizard.multi_online_storage_setup.title=Configure Online Folders
 wizard.multi_online_storage_setup.title=Online Folder konfigurieren
-#orig#wizard.pfwizard.title=Folder Wizard
-wizard.pfwizard.title=Assistent
+#orig#wizard.pfwizard.folder_title=Folder Wizard
+wizard.pfwizard.folder_title=Assistent
 #orig#wizard.project_name.folder_project_success=You successfully set up a project folder\!\n
 wizard.project_name.folder_project_success=Die Projektsynchronisation wurde erfolgreich eingerichtet\!\n
 #orig#wizard.select_online_storage.desktop_shortcut.text=Create desktop shortcut
