--- a/src/etc/Translation_es.properties
+++ b/src/etc/Translation_es.properties
@@ -2632,8 +2632,8 @@ wizard.multi_online_storage_setup.local_folder_location=Ubicaci\u00f3n de carpet
 wizard.multi_online_storage_setup.select_directory=Seleccionar directorio
 #orig#wizard.multi_online_storage_setup.title=Configure Online Folders
 wizard.multi_online_storage_setup.title=Configurar Carpetas de Almacenamiento en linea
-#orig#wizard.pfwizard.title=Folder Wizard
-wizard.pfwizard.title=Mago de Carpetasl
+#orig#wizard.pfwizard.folder_title=Folder Wizard
+wizard.pfwizard.folder_title=Mago de Carpetasl
 #orig#wizard.project_name.folder_project_success=You successfully set up a project folder\!\n
 wizard.project_name.folder_project_success=Has configurado con \u00e9xito una carpeta de proyectos\!\n
 #orig#wizard.select_online_storage.desktop_shortcut.text=Create desktop shortcut
