--- a/src/etc/Translation_ja.properties
+++ b/src/etc/Translation_ja.properties
@@ -1919,7 +1919,7 @@ wizard.login_online_storage.setup_default=\u30c7\u30d5\u30a9\u30eb\u30c8\u306e\u
 ##wizard.multi_online_storage_setup.local_folder_location=Local folder location
 ##wizard.multi_online_storage_setup.select_directory=Select directory
 ##wizard.multi_online_storage_setup.title=Configure Online Folders
-##wizard.pfwizard.title=Folder Wizard
+##wizard.pfwizard.folder_title=Folder Wizard
 #orig#wizard.project_name.folder_project_success=You successfully set up a project folder\!\n
 wizard.project_name.folder_project_success=\u30d7\u30ed\u30b8\u30a7\u30af\u30c8\u30fb\u30d5\u30a9\u30eb\u30c0\u306e\u30bb\u30c3\u30c8\u30a2\u30c3\u30d7\u306b\u6210\u529f\u3057\u307e\u3057\u305f\uff01\n
 ##wizard.select_online_storage.desktop_shortcut.text=Create desktop shortcut
