--- a/src/etc/Translation_ru.properties
+++ b/src/etc/Translation_ru.properties
@@ -1924,7 +1924,7 @@ wizard.login_online_storage.setup_default=\u0421\u043e\u0437\u0434\u0430\u0442\u
 ##wizard.multi_online_storage_setup.local_folder_location=Local folder location
 ##wizard.multi_online_storage_setup.select_directory=Select directory
 ##wizard.multi_online_storage_setup.title=Configure Online Folders
-##wizard.pfwizard.title=Folder Wizard
+##wizard.pfwizard.folder_title=Folder Wizard
 #orig#wizard.project_name.folder_project_success=You successfully set up a project folder\!\n
 wizard.project_name.folder_project_success=\u0412\u044b \u0443\u0441\u043f\u0435\u0448\u043d\u043e \u0443\u0441\u0442\u0430\u043d\u043e\u0432\u0438\u043b\u0438 \u043f\u0430\u043f\u043a\u0443 \u043f\u0440\u043e\u0435\u043a\u0442\u0430\!\n
 ##wizard.select_online_storage.desktop_shortcut.text=Create desktop shortcut
