--- a/src/etc/Translation_en_GB.properties
+++ b/src/etc/Translation_en_GB.properties
@@ -1418,7 +1418,7 @@ wizard.multi_folder_setup.title=Configure Folders
 wizard.multi_folder_setup.no_name.title=No name
 wizard.multi_folder_setup.no_name.text=No name has been entered for {0}
 wizard.multi_online_storage_setup.title=Configure Online Folders
-wizard.pfwizard.title=Folder Wizard
+wizard.pfwizard.folder_title=Folder Wizard
 wizard.project_name.folder_project_success=You successfully set up a project folder\!\n
 wizard.select_online_storage.title=Select Online Folders
 wizard.select_online_storage.info=Please select online folders to join locally
