--- a/src/etc/Translation_fr.properties
+++ b/src/etc/Translation_fr.properties
@@ -1926,7 +1926,7 @@ wizard.login_online_storage.setup_default=Configurer le dossier de synchronisati
 ##wizard.multi_online_storage_setup.local_folder_location=Local folder location
 ##wizard.multi_online_storage_setup.select_directory=Select directory
 ##wizard.multi_online_storage_setup.title=Configure Online Folders
-##wizard.pfwizard.title=Folder Wizard
+##wizard.pfwizard.folder_title=Folder Wizard
 #orig#wizard.project_name.folder_project_success=You successfully set up a project folder\!\n
 wizard.project_name.folder_project_success=Cr\u00e9ation d'un dossier de projet r\u00e9ussie\!\n
 ##wizard.select_online_storage.desktop_shortcut.text=Create desktop shortcut
