--- a/src/etc/Translation_it.properties
+++ b/src/etc/Translation_it.properties
@@ -2631,8 +2631,8 @@ wizard.multi_online_storage_setup.local_folder_location=Posizione Cartella Local
 wizard.multi_online_storage_setup.select_directory=Seleziona directory
 #orig#wizard.multi_online_storage_setup.title=Configure Online Folders
 wizard.multi_online_storage_setup.title=Configura Cartelle Online Storage
-#orig#wizard.pfwizard.title=Folder Wizard
-wizard.pfwizard.title=Folder Wizard
+#orig#wizard.pfwizard.folder_title=Folder Wizard
+wizard.pfwizard.folder_title=Folder Wizard
 #orig#wizard.project_name.folder_project_success=You successfully set up a project folder\!\n
 wizard.project_name.folder_project_success=Avete impostato correttamente la cartella per il progetto\!\n
 #orig#wizard.select_online_storage.desktop_shortcut.text=Create desktop shortcut
