--- a/src/etc/Translation_pt.properties
+++ b/src/etc/Translation_pt.properties
@@ -1823,7 +1823,7 @@ wizard.load_invitation.select_file=Por favor selecione arquivo de convite
 ##wizard.multi_online_storage_setup.local_folder_location=Local folder location
 ##wizard.multi_online_storage_setup.select_directory=Select directory
 ##wizard.multi_online_storage_setup.title=Configure Online Folders
-##wizard.pfwizard.title=Folder Wizard
+##wizard.pfwizard.folder_title=Folder Wizard
 #orig#wizard.project_name.folder_project_success=You successfully set up a project folder\!\n
 wizard.project_name.folder_project_success=Voc\u00ea configurou a pasta do projeto com sucesso\!\n
 ##wizard.select_online_storage.desktop_shortcut.text=Create desktop shortcut
