--- a/src/etc/Translation_zh.properties
+++ b/src/etc/Translation_zh.properties
@@ -2667,8 +2667,8 @@ wizard.multi_online_storage_setup.local_folder_location=\u672c\u5730\u6587\u4ef6
 wizard.multi_online_storage_setup.select_directory=\u9009\u62e9\u76ee\u5f55
 #orig#wizard.multi_online_storage_setup.title=Configure Online Folders
 wizard.multi_online_storage_setup.title=\u914d\u7f6e\u5728\u7ebf\u5b58\u50a8\u6587\u4ef6\u5939
-#orig#wizard.pfwizard.title=Folder Wizard
-wizard.pfwizard.title=\u6587\u4ef6\u5939\u5411\u5bfc
+#orig#wizard.pfwizard.folder_title=Folder Wizard
+wizard.pfwizard.folder_title=\u6587\u4ef6\u5939\u5411\u5bfc
 #orig#wizard.project_name.folder_project_success=You successfully set up a project folder\!\n
 wizard.project_name.folder_project_success=\u4f60\u5df2\u7ecf\u6210\u529f\u8bbe\u7f6e\u4e00\u4e2a\u9879\u76ee\u6587\u4ef6\u5939\uff01
 #orig#wizard.select_online_storage.desktop_shortcut.text=Create desktop shortcut
