--- a/src/etc/Translation_de.properties
+++ b/src/etc/Translation_de.properties
@@ -1406,7 +1406,7 @@ status_tab.online_storage.account_not_logged_in={0} melde an...
 #orig#status_tab.online_storage.account_not_logged_in.tips={APPNAME} is logging in to this account
 status_tab.online_storage.account_not_logged_in.tips={APPNAME} meldet sich beim Benutzerkonto an
 #orig#status_tab.online_storage.no_password=Log in to Online Storage
-status_tab.online_storage.no_password=Beim Online Speicher anmelden
+status_tab.online_storage.no_password=Bei {APPNAME} anmelden
 #orig#status_tab.online_storage.no_password.tips=Click here to enter account password
 status_tab.online_storage.no_password.tips=Klick um das Passwort einzugeben
 #orig#status_tab.online_storage.not_setup=Not set up yet. Sign up and login here.
