--- a/src/etc/Translation_de.properties
+++ b/src/etc/Translation_de.properties
@@ -1840,7 +1840,7 @@ preferences.dialog.translucent_frame=Haupt-Fenster transparent darstellen
 preferences.dialog.translucent_text=Transparenz
 #orig#preferences.dialog.ui.title=User Interface
 preferences.dialog.ui.title=Benutzeroberfl\u00e4che
-##preferences.dialog.ui_locked=Lock on startup
+preferences.dialog.ui_locked=Zugang beim Start sperren
 #orig#preferences.dialog.underline_link=Always underline links
 preferences.dialog.underline_link=Links immer unterstreichen
 #orig#preferences.dialog.use.relayed.connections=Use relayed connections
@@ -2079,6 +2079,8 @@ pro.wizard.activation.unable_to_login=Anmeldung fehlgeschlagen. Email oder Passw
 pro.wizard.activation.valid_from=G\u00fcltig ab
 #orig#pro.wizard.activation.valid_to=Valid to
 pro.wizard.activation.valid_to=G\u00fcltig bis
+
+pro.wizard.activation.learn_more=Mehr Information...
 
 #orig#remove_pattern.dont=Do Not Remove
 remove_pattern.dont=Nicht entfernen
