--- a/src/etc/ReleaseNotes.txt
+++ b/src/etc/ReleaseNotes.txt
@@ -1,16 +1,34 @@
-PowerFolder Version 4.2.1 - http://www.powerfolder.com
+PowerFolder Version 4.2.3 - http://www.powerfolder.com
 
 = New features =
- * Introduced "connect on demand" feature to reduce the number active connections.
-   http://www.powerfolder.com/wiki/Connect_on_demand
- * Special Linux client with web interface available. Contact us for details.
+ * Simplified usage and setup of PowerFolder: Less questions - better defaults.
+   Now much easier to setup by clicking "New Folder" on any computer.
+ * Client now automatically switches online to better license key if current
+   one is not longer valid (expired or exceeded).
  
 = Improvements ==
- * Linux client takes hostname instead of username by default as nick/computer name.
- 
-= Bugfixes =
- * Several minor bugfixes.
+ * Cleanup up user interface: Removed boxes around folder and computers.
+   Also simplified status / home window.
+ * Client configuration options can now be restricted to administrators only.
+   This prevents accidental users from changing client settings.
+   Useful when running PowerFolder in-house with own server:
+   http://www.powerfolder.com/wiki/Server_Overview
+ * Added more placeholder / parameters to script execution after download:
+   http://www.powerfolder.com/wiki/Script_execution
+ * Added several enhancements to client/server protocol to make it more
+   robust against further changes.
+ * Updated Spanish translation. Big thanks to Javier!
+ * Several other improvements.
 
+= Bugfixes =
+ * Fixed problem when trying to add custom directory to sync, share or backup.
+ * Fixed problem while storing preferences.
+ * Fixed chat display problems.
+ * Fixed problem while downloading files with size 0.
+ * Fixed problem while installing PowerFolder as system service
+   under Windows 2003: http://www.powerfolder.com/wiki/System_Service
+ * Fixed window resizing behavior.
+ * Now correctly remembers pause mode setting after restart.
 
 Please give us feedback and request improvements:
 http://www.powerfolder.com/contact.html
@@ -37,6 +55,21 @@ Email      : contact (at) powerfolder.com
 
 
 == Version History ==
+
+Version 4.2.1
+-------------
+
+= New features =
+ * Introduced "connect on demand" feature to reduce the number active connections.
+   http://www.powerfolder.com/wiki/Connect_on_demand
+ * Special Linux client with web interface available. Contact us for details.
+ 
+= Improvements ==
+ * Linux client takes hostname instead of username by default as nick/computer name.
+ 
+= Bugfixes =
+ * Several minor bugfixes.
+ 
 
 Version 4.1.3
 -------------
