--- a/src/etc/ReleaseNotes.txt
+++ b/src/etc/ReleaseNotes.txt
@@ -3,13 +3,12 @@ PowerFolder Version 4.2.3 - http://www.powerfolder.com
 = New features =
  * Simplified usage and setup of PowerFolder: Less questions - better defaults.
    Removed option "Sync previously setup folder" from wizard.
-   Now simply choose sync, backup, share or extended setup to
-   setup folders on all computers.
+   Now simply choose sync, backup, share to setup folders on all computers.
  * Client now automatically switches to better license key if current
-   one is not longer valid (expired or exceeded).
+   one is no longer valid (expired or exceeded).
  
 = Improvements ==
- * Cleanup up user interface: Removed boxes around folder and computers.
+ * Cleaned up user interface: Removed boxes around folder and computers.
    Also simplified status / home window.
  * Client configuration options can now be restricted to administrators only.
    This prevents accidental change of client settings by users.
@@ -24,10 +23,10 @@ PowerFolder Version 4.2.3 - http://www.powerfolder.com
 
 = Bugfixes =
  * Eliminated a memory leak.
- * Fixed problem when trying to add custom directory to sync, share or backup.
+ * Fixed problem when trying to sync, share or backup custom directories.
  * Fixed problem while storing preferences.
  * Fixed chat display problems.
- * Fixed problem while downloading files with size 0.
+ * Fixed problem while downloading files with zero size.
  * Fixed problem while installing PowerFolder as system service
    under Windows 2003: http://www.powerfolder.com/wiki/System_Service
  * Fixed window resizing behavior.
