--- a/src/etc/Translation_de.properties
+++ b/src/etc/Translation_de.properties
@@ -2709,7 +2709,7 @@ wizard.tell_friend.add_email_address=Bitte Emails eingeben (eine pro Zeile)
 #orig#wizard.tell_friend.information1=Send emails inviting people to use {APPNAME}.
 wizard.tell_friend.information1=Empfiehlt {APPNAME} einem Freund oder Freundin 
 #orig#wizard.tell_friend.information2=Emails will be sent online.
-wizard.tell_friend.information2=Es werden Emails verschickt.
+wizard.tell_friend.information2=
 #orig#wizard.tell_friend.personal_message=Please enter a message for the receiver(s) (optional)
 wizard.tell_friend.personal_message=Nachricht f\u00fcr den Empf\u00e4nger eingeben (optional)
 #orig#wizard.tell_friend.success=Emails have been sent to the recipients.
