--- a/src/etc/Translation_de.properties
+++ b/src/etc/Translation_de.properties
@@ -2741,6 +2741,10 @@ wizard.webservice.unmirror_setup=Vom Online Speicher entfernen
 #orig#wizard.webservice.username=Email\:
 wizard.webservice.username=Email
 #orig#wizard.what_to_do.backp.select=Please select the files to backup
+
+wizard.what_to_do.download=Dateien herunterladen
+wizard.what_to_do.download.tip=Dateien automatisch herunterladen, bzw. wiederherstellen
+
 wizard.what_to_do.backp.select=Welche Dateien sollen gesichert werden?
 #orig#wizard.what_to_do.backup_folder=Backup files
 wizard.what_to_do.backup_folder=Dateien sichern
@@ -2756,6 +2760,8 @@ wizard.what_to_do.folder_backup_success=Sie haben das Backup\nerfolgreich einger
 wizard.what_to_do.folder_host_success=Verzeichnis wurde erfolgreich freigegeben\!\n
 #orig#wizard.what_to_do.host_pcs.select=Please select the files to send/shared
 wizard.what_to_do.host_pcs.select=Welche Dateien sollen versendet werden?
+wizard.what_to_do.download.select=Welche Dateien sollen heruntergeladen werden?
+wizard.what_to_do.folder_download_sucess=
 #orig#wizard.what_to_do.host_pcs_join=Other computers can join this folder now
 wizard.what_to_do.host_pcs_join=Sie k\u00f6nnen nun anderen Computern Zugriff geben.
 #orig#wizard.what_to_do.host_work=Send/Share files
@@ -2778,9 +2784,9 @@ wizard.what_to_do.open_online_documentation=Dokumentation \u00f6ffnen
 #orig#wizard.what_to_do.open_online_documentation.tip=Open online documentation about setting up {APPNAME}
 wizard.what_to_do.open_online_documentation.tip=Online Dokumentation aufrufen
 #orig#wizard.what_to_do.pcs_join=Other computers can join this folder now
-wizard.what_to_do.pcs_join=Andere Computer k\u00f6nnen nun dem Folder beitreten
+wizard.what_to_do.pcs_join=Weitere Computer können nun ebenfalls eingerichtet werden
 #orig#wizard.what_to_do.sync_pcs.pcs_join=Other computers can join this folder now
-wizard.what_to_do.sync_pcs.pcs_join=Andere Computer k\u00f6nnen nun dem Folder beitreten
+wizard.what_to_do.sync_pcs.pcs_join=Bitte wiederholen Sie den Vorgang auf allen anderen Computern
 #orig#wizard.what_to_do.sync_pcs.select=Please select the files to sync
 wizard.what_to_do.sync_pcs.select=Welche Dateien sollen synchronisiert werden?
 #orig#wizard.what_to_do.sync_pcs.success=You successfully set up a folder mirror\n
