--- a/src/etc/Translation_de.properties
+++ b/src/etc/Translation_de.properties
@@ -2741,6 +2741,7 @@ wizard.webservice.unmirror_setup=Vom Online Speicher entfernen
 #orig#wizard.webservice.username=Email\:
 wizard.webservice.username=Email
 #orig#wizard.what_to_do.backp.select=Please select the files to backup
+wizard.what_to_do.more=Mehr Optionen anzeigen
 
 wizard.what_to_do.download=Dateien herunterladen
 wizard.what_to_do.download.tip=Dateien automatisch herunterladen, bzw. wiederherstellen
